# nonebot-plugin-mcmod

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
nonebot-plugin-mcmod/: __init__.py  get_source.py  mcmod.py
nonebot_plugin_mcmod/: mcmod.py
